--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "react-for-beginners",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3003/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -10,8 +11,8 @@
     "prototype": "^0.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
