--- a/client/package.json
+++ b/client/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "react-for-beginners",
+  "name": "client1",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3003/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "prop-types": "^15.8.1",
-    "prototype": "^0.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,10 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "main": "index.js",
-  "devDependencies": {},
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
