--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.0.3",
+    "three": "^0.141.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
