--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^3.8.0",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
